# daily2rxiv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
daily2rxiv/: __init__.py  cli.py  config.py  http.py  models.py  pipeline.py  render.py  summarize.py
daily2rxiv/sources/: __init__.py  arxiv.py  biorxiv.py
data/: latest.json
data/2026-07-07/: digest.md  papers.json
data/2026-07-08/: digest.md  papers.json
data/2026-07-10/: digest.md  papers.json
data/2026-07-11/: digest.md  papers.json
data/2026-07-12/: digest.md  papers.json
data/2026-07-14/: digest.md  papers.json
data/2026-07-15/: digest.md  papers.json
data/2026-07-16/: digest.md  papers.json
data/2026-07-17/: digest.md  papers.json
data/2026-07-18/: digest.md  papers.json
data/2026-07-19/: digest.md  papers.json
data/2026-07-20/: digest.md  papers.json
data/2026-07-21/: digest.md  papers.json
data/2026-07-22/: digest.md  papers.json
data/2026-07-23/: digest.md  papers.json
data/2026-07-24/: digest.md  papers.json
tests/: test_cli.py  test_models.py  test_sources.py  test_summarize_render_pipeline.py
