[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily2rxiv"
version = "0.1.0"
description = "Daily arXiv, bioRxiv, and medRxiv digest generator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hinna0818" }]
dependencies = [
  "requests>=2.32",
  "feedparser>=6.0",
  "pydantic>=2.8",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
llm = ["openai>=1.40"]
dev = ["pytest>=8.0"]

[project.scripts]
daily2rxiv = "daily2rxiv.cli:main"

[tool.setuptools.packages.find]
include = ["daily2rxiv*"]
